# keisei

./: .editorconfig  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SCRIPTS.md  SECURITY.md  default_config.yaml  keisei-500k-league.toml  keisei-500k.toml  keisei-ddp.toml  keisei-h200.toml  keisei-katago.toml  keisei-league.toml  keisei.toml  pod-setup.sh  pyproject.toml  pytest.ini  rebuild-rust-bindings.sh  requirements-dev.txt  run-500k-league.sh  run-500k.sh  run-league.sh  run-training.sh  run.sh  train.py
.beads/: issues.jsonl
.claude/: settings.json
.claude/agents/: ux-specialist.md
.github/: pull_request_template.md
.github/workflows/: README.md  ci.yml  ci.yml.disabled
configs/: ddp_example.toml
docs/: DESIGN.md  architecture-assessment.md  architecture-consensus-dissenting-viewpoint-paper.md
docs/arch-analysis-2026-02-06-1844/: 00-coordination.md  01-discovery-findings.md  02-subsystem-catalog.md  03-diagrams.md  04-final-report.md  05-cross-cutting-assessment.md  05-quality-assessment.md  06-architect-handover.md
docs/arch-analysis-2026-05-05-1007/: 00-coordination.md  01-discovery-findings.md  02-subsystem-catalog.md  03-diagrams.md  04-final-report.md  05-architecture-critique.md  06-debt-register.md
docs/architecture/: README.md  league-first-architecture-evolution.md  moves-1-3-execution-readiness-spikes.md  three-view-broadcast-architecture.md  webui-implementation-failure-analysis.md
docs/bugs/: CODEX_LOG.md  tiered-pool-plan-compliance-audit.md
docs/code_analysis/: _plan.md  _repair_manifest.md  _verdicts.csv  keisei___init__.py.analysis.md  keisei_config_schema.py.analysis.md  keisei_constants.py.analysis.md  keisei_core___init__.py.analysis.md  keisei_core_actor_critic_protocol.py.analysis.md  keisei_core_base_actor_critic.py.analysis.md  keisei_core_experience_buffer.py.analysis.md  keisei_core_neural_network.py.analysis.md  keisei_core_ppo_agent.py.analysis.md  keisei_core_scheduler_factory.py.analysis.md  keisei_evaluation___init__.analysis.md  keisei_evaluation_analytics___init__.analysis.md  keisei_evaluation_analytics_advanced_analytics.analysis.md  keisei_evaluation_analytics_elo_tracker.analysis.md  keisei_evaluation_analytics_performance_analyzer.analysis.md  keisei_evaluation_analytics_report_generator.analysis.md  keisei_evaluation_core___init__.analysis.md  keisei_evaluation_core_background_tournament.analysis.md  keisei_evaluation_core_base_evaluator.analysis.md  keisei_evaluation_core_evaluation_config.analysis.md  keisei_evaluation_core_evaluation_context.analysis.md  keisei_evaluation_core_evaluation_result.analysis.md  keisei_evaluation_core_manager.analysis.md  keisei_evaluation_core_model_manager.analysis.md  keisei_evaluation_core_parallel_executor.analysis.md  keisei_evaluation_enhanced_manager.analysis.md  keisei_evaluation_opponents___init__.analysis.md  keisei_evaluation_opponents_elo_registry.analysis.md  keisei_evaluation_opponents_enhanced_manager.analysis.md  keisei_evaluation_opponents_opponent_pool.analysis.md  keisei_evaluation_performance_manager.analysis.md  keisei_evaluation_strategies___init__.analysis.md  keisei_evaluation_strategies_benchmark.analysis.md  keisei_evaluation_strategies_custom.analysis.md  keisei_evaluation_strategies_ladder.analysis.md  keisei_evaluation_strategies_single_opponent.analysis.md  keisei_evaluation_strategies_tournament.analysis.md  (+50 more)
docs/concepts/: opponent-card-data.md  tiered-opponent-pool.md
docs/designs/: streamlit-dashboard-v2.md
docs/profiling/: 2026-04-07-hotpath-findings.md
docs/webui/: advanced-rl-visualizations.md  v1-contract-reference.md  webui_stability_fixes_summary.md
examples/: enhanced_display_config.yaml
keisei/: __init__.py  config.py  config_schema.py  constants.py  db.py
keisei/core/: __init__.py  actor_critic_protocol.py  base_actor_critic.py  experience_buffer.py  neural_network.py  ppo_agent.py
keisei/db/: __init__.py  _connection.py  _migrations.py  game_features.py  gauntlet.py  head_to_head.py  historical.py  league.py  metrics.py  (+6 more)
profiles/: compile-diagnostics-small.txt  hotpath-production-all.txt  hotpath-production.txt  hotpath-small-all.txt  hotpath-small.txt
scripts/: benchmark_compile.py  codex_audit_common.py  codex_bug_hunt.py  profile_hotpath.py  profile_training.py  run_local_ci.sh
shogi-engine/: Cargo.toml
shogi-engine/crates/shogi-core/: Cargo.toml
shogi-engine/crates/shogi-core/benches/: movegen.rs
shogi-engine/crates/shogi-core/src/: attack.rs  game.rs  lib.rs  movegen.rs  movelist.rs  piece.rs  position.rs  rules.rs  sfen.rs  types.rs  zobrist.rs
shogi-engine/crates/shogi-gym/: Cargo.toml  pyproject.toml
shogi-engine/crates/shogi-gym/src/: action_mapper.rs  katago_observation.rs  lib.rs  observation.rs  spatial_action_mapper.rs  spectator.rs  spectator_data.rs  step_result.rs  vec_env.rs
shogi-engine/crates/shogi-gym/tests/: test_action_mapper.py  test_cross_validation.py  test_full_cross_validation.py  test_observation.py  test_spectator.py  test_vec_env.py
tests/: _helpers.py  conftest.py  test_amp.py  test_bugfix_regressions.py  test_checkpoint.py  test_checkpoint_architecture.py  test_checkpoint_gaps.py  test_checkpoint_optimizer_state.py  test_compile.py  test_concurrent_matches.py  test_concurrent_round.py  test_config.py  test_db.py  test_db_edge_cases.py  test_db_gaps.py  test_db_league_schema.py  test_db_schema_v2.py  test_db_style_schema.py  test_demonstrator.py  test_dynamic_manager.py  test_dynamic_trainer.py  test_entropy_annealing.py  test_evaluate.py  test_evaluation.py  test_frontier_promoter.py  test_gae.py  test_gae_batched.py  test_gae_padded.py  test_game_feature_tracker.py  test_historical_gauntlet.py  test_historical_library.py  test_host_filter.py  test_katago_checkpoint.py  test_katago_config.py  test_katago_loop.py  test_katago_loop_integration.py  test_katago_model.py  test_katago_observation.py  test_katago_ppo.py  test_league.py  (+67 more)
webui/: README.md  index.html  package-lock.json  package.json  vite.config.js
(+504 files in other folders)
