[project]
name = "keisei"
version = "0.1.0"
description = "Deep RL Shogi training system with Rust core"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "torch",
    "numpy",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "ruff", "mypy"]
sl = ["chardet>=5.0"]

[project.scripts]
keisei-train = "keisei.training.loop:main"
keisei-serve = "keisei.server.app:main"
keisei-prepare-sl = "keisei.sl.prepare:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["keisei*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
