[project]
name = "keisei"
version = "0.2.0"
description = "Deep RL Shogi training system with Rust core"
license = {text = "MIT"}
requires-python = ">=3.12"
readme = "README.md"
authors = [
    {name = "John Morrissey"},
]
keywords = ["shogi", "reinforcement-learning", "deep-learning", "pytorch", "rust", "ppo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "torch",
    "numpy",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
]

[project.urls]
Repository = "https://github.com/tachyon-beep/keisei"
Changelog = "https://github.com/tachyon-beep/keisei/blob/main/CHANGELOG.md"
Issues = "https://github.com/tachyon-beep/keisei/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-xdist", "httpx", "ruff", "mypy", "types-chardet", "types-psutil", "types-tqdm"]
sl = ["chardet>=5.0"]

[project.scripts]
keisei-train = "keisei.training.katago_loop:main"
keisei-serve = "keisei.server.app:main"
keisei-prepare-sl = "keisei.sl.prepare:main"
keisei-evaluate = "keisei.training.evaluate:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["keisei*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow-running (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring DB, filesystem, or subprocess resources (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
# Expanded from strict=true, minus disallow_untyped_call (PyTorch stubs are incomplete)
exclude = [
    "shogi-engine/",  # PyO3 extension — tested via maturin, not mypy
]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "scripts.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "shogi_gym.*"
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torch",
]
ignore_missing_imports = true
