[package]
name = "shogi-gym"
version = "0.1.0"
edition = "2024"
description = "RL training environment for Shogi with PyO3 bindings"
license = "MIT"

[lib]
name = "shogi_gym"
crate-type = ["cdylib", "rlib"]

[dependencies]
shogi-core = { path = "../shogi-core" }
pyo3 = "0.23"
numpy = "0.23"
rayon = "1.10"

[features]
extension-module = ["pyo3/extension-module"]
